initial version of the API concluded #4
