# functions/src/models/Merchant.ts
@@ -3,10 +3,12 @@ import {AbstractDatedEntity, AbstractDatedEntityImp} from "./AbstractDatedEntity
 import Stripe = require("stripe");
 import {getRepository} from "../conf/database";
 import * as _ from 'lodash';
+import {ReportableEntity} from "./ReportableEntity";
+import {ReportingService} from "../services/ReportingService";
 
 // import * as uuid from 'uuid';
 
-export enum Status {
+export enum StatusModel {
   Stripe_waiting = "Stripe_waiting", //Stripe_waiting (waiting activation from Stripe) [enabled = false]
   Active = "Active", //Active (all good and accepting payments)  [enabled = true]
   Inactive = "Inactive",//Inactive (disabled by the API)  [enabled = false]
@@ -14,9 +16,9 @@ export enum Status {
 
 }
 
+
 export interface MerchantInput {
   drveUid: string;//doubles down with DRVE id
-
   shopifyDomain: string;
 
   commissionPercentage: number;
@@ -30,10 +32,14 @@ export interface MerchantInput {
 
 
 
+
 }
 
+/**
+ * @tsoaModel
+ */
 export interface MerchantOutput extends MerchantInput,IEntity, AbstractDatedEntity  {
-  status: Status;
+  status: StatusModel;
 
   gatewayURL: string;
   gatewayAccountId: string;
@@ -59,7 +65,7 @@ export class MerchantOutputInstance implements MerchantOutput {
   id: string = "";
   name: string = "";
   shopifyDomain: string = "";
-  status: Status  =Status.Stripe_waiting;
+  status: StatusModel  =StatusModel.Stripe_waiting;
   stripeAcctId: string = "";
   stripeOnConnectionRedirectURL: string = "";
   stripeURLToConnectAccount: string = "";
@@ -82,23 +88,45 @@ export enum AuthorativeEntity {
   DRVE = "DRVE"
 }
 
-export interface StatusMerchant {
-  status: Status;
+export interface IMerchantStatus {
+  status: StatusModel;
   miscInfo?: string;
   dateStatus: Date;
   enforcedBy: AuthorativeEntity;
 }
 
-export interface StatusMerchantOutput extends StatusMerchant {
+export interface MerchantStatusOutput extends IMerchantStatus {
   drveUid: string;
 }
 
-export class StatusMerchantInstance implements IEntity,  StatusMerchant {
+class MerchantStatusOutputInstance implements MerchantStatusOutput{
+  dateStatus: Date = new Date();
+  drveUid: string = "";
+  enforcedBy: AuthorativeEntity = AuthorativeEntity.DRVE;
+  miscInfo: string = "";
+  status: StatusModel = StatusModel.Inactive;
+}
+
+const merchantStatusOutputKeys = Object.keys(new MerchantStatusOutputInstance());
+
+export class MerchantStatusInstance extends ReportableEntity implements IEntity,  IMerchantStatus {
   dateStatus!: Date;
   enforcedBy!: AuthorativeEntity;
   miscInfo?: string;
-  status!: Status;
+  status!: StatusModel;
   id!: string;
+
+
+  asOutput(drveUid: string): Partial<MerchantStatusOutput> {
+    const merchantStatusOutput = <MerchantStatusOutput>_.pick(this, merchantStatusOutputKeys);
+    if(this.miscInfo == undefined) {
+      delete merchantStatusOutput.miscInfo;
+    }
+
+    merchantStatusOutput.drveUid = drveUid;
+    return merchantStatusOutput;
+  }
+
 
 }
 
@@ -125,7 +153,7 @@ export class MerchantInstance extends AbstractDatedEntityImp implements Merchant
 
   _enabled?: boolean;
   get enabled(): boolean {
-    return this.latestStatus.status == Status.Active;
+    return this.latestStatus.status == StatusModel.Active;
   }
   set enabled(value: boolean) {
     throw new Error("Can't set the enabled directly");
@@ -136,14 +164,14 @@ export class MerchantInstance extends AbstractDatedEntityImp implements Merchant
   gatewayURL!: string;
   name!: string;
 
-  latestStatus!: StatusMerchant;
+  latestStatus!: IMerchantStatus;
 
-  @SubCollection(StatusMerchantInstance)
-  statuses!: ISubCollection<StatusMerchantInstance>;
+  @SubCollection(MerchantStatusInstance)
+  statuses!: ISubCollection<MerchantStatusInstance>;
 
   stripeEnabled: boolean = false;
 
-  get status(): Status {
+  get status(): StatusModel {
     return this.latestStatus.status;
   }
 
@@ -169,21 +197,42 @@ export class MerchantInstance extends AbstractDatedEntityImp implements Merchant
     // this._enabled = enabled;
   // }
 
-  async addStatus(status: Status, enforcedBy: AuthorativeEntity, miscInfo?: string) {
-    const instance = new StatusMerchantInstance();
+  async addStatus(status: StatusModel, enforcedBy: AuthorativeEntity, miscInfo?: string) {
+    const instance = new MerchantStatusInstance();
     instance.dateStatus = new Date();
     instance.enforcedBy = enforcedBy;
     instance.miscInfo = miscInfo;
     instance.status = status;
 
     this.latestStatus = Object.assign({},instance);
-    await this.statuses.create(instance);
+    const statusMerchant = await this.statuses.create(instance);
+    //so - this enqueue might fail - but the status and etc was already written
+    //that means that it should be picked up on the trigger
+
+    await ReportingService.enqueueStatusMerchant(statusMerchant, this.id, this.connectedAccountWebhookUrl, `addStatus`);
+
 
 
   }
+  //TODO - when setting stripe enabled - check the _enabled to see what changes
+  async setEnabled(value: boolean, miscInfo?:string) {
+    if(this._enabled != value && (this.status == StatusModel.Active || this.status == StatusModel.Inactive)) {
+      //then the status changes
+      const newStatus = value ? StatusModel.Active : StatusModel.Inactive;
+      await this.addStatus(newStatus, AuthorativeEntity.DRVE,miscInfo);
+    }
+    this._enabled = value;
+  }
 
-  asOutput(): Partial<MerchantOutput> {
-    return _.pick(this, merchantOutputKeys);
+  asOutput(): MerchantOutput {
+    if(this.status == undefined) {
+      throw new Error(`${this} had an empty status`);
+
+    }
+    return _.pick(this, merchantOutputKeys) as MerchantOutput;
+  }
+  public toString(): string {
+    return `Merchant id: ${this.id}`;
   }
 
 }
@@ -203,7 +252,7 @@ export class MerchantService {
     instance._enabled = enabledValue;
     instance = await MerchantService.getRepository().create(instance);
     //at the beginning - Stripe can't be active
-    instance.addStatus(Status.Stripe_waiting, AuthorativeEntity.Stripe, "Merchant initial status");
+    await instance.addStatus(StatusModel.Stripe_waiting, AuthorativeEntity.Stripe, "Merchant initial status");
     return instance;
   }
   static async create(testMode: boolean, init: MerchantInput): Promise<MerchantInstance> {
